trying to solve problems with distances

--- a/edinburgh_bikes.ipynb
+++ b/edinburgh_bikes.ipynb
@@ -86,13 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "bikes_df = pd.read_pickle('data/bikes_df.pickle')\n",
     "weather_df = pd.read_pickle('data/weather_df.pickle')\n",
     "dist_df = pd.read_pickle('data/dist_table.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bikes_df.drop('index', axis=1).to_csv('data/bikes_df.csv', index=False)"
    ]
   },
   {
